--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /public/hot
 /public/storage
 /storage/*.key
+/vendor
 .env.backup
 .env.production
 .phpunit.result.cache
@@ -15,4 +16,3 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
-/.vendor
